# tauri2-local-llm

./: AGENTS.md  CLAUDE.md  README.md
llama-cpp-ffi/: .gitignore  README.md  package.json
llama-cpp-ffi/docs/: 2026-07-04-gemma4-audio-ffi-plan.md
llama-cpp-ffi/src-tauri/: Cargo.toml  tauri.conf.json
llama-cpp-ffi/src-tauri/src/: lib.rs  main.rs
llama-cpp-ffi/src-tauri/src/core/: engine.rs  mod.rs
llama-cpp-ffi/src-tauri/tests/: audio_transcription_test.rs  hello_world_test.rs
