[package]
name = "llama-cpp-ffi"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llama_cpp_ffi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["mtmd", "metal"]
mtmd = ["llama-cpp-2/mtmd"]
metal = ["llama-cpp-2/metal"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.150", default-features = false }
llama-cpp-sys-2 = { version = "0.1.150", default-features = false }
